--- a/IPE/quick-count.html
+++ b/IPE/quick-count.html
@@ -48,7 +48,7 @@
         <section id="perolehan" class="w-100 text-center mb-5">
             <h1 class="mb-3">Quick Count</h1>
             <div class="ms-auto me-auto">
-                <canvas id="grafik"></canvas>
+                <canvas id="grafik" class="mb-5"></canvas>
                 <section id="paslon" class="row text-center mb-3">
                     <div class="col-md-4">
                         <div class="card p-3 ms-1 me-1 mb-3">
