--- a/IPE/quick-count.html
+++ b/IPE/quick-count.html
@@ -45,10 +45,10 @@
     <!-- Container -->
     <div class="ms-3 me-3 p-3">
 
-        <section id="perolehan" class="w-100 text-center mb-5">
+        <section id="perolehan" class="w-100 text-center mb-3">
             <h1 class="mb-3">Quick Count</h1>
             <div class="ms-auto me-auto">
-                <canvas id="grafik" class="mb-5"></canvas>
+                <canvas id="grafik" class="mb-3"></canvas>
                 <section id="paslon" class="row text-center mb-3">
                     <div class="col-md-4">
                         <div class="card p-3 ms-1 me-1 mb-3">
@@ -75,13 +75,13 @@
             </div>
         </section>
 
-        <div class="mt-5 mb-5 border-top"></div>
+        <div class="mt-3 mb-3 border-top"></div>
 
         <div class="w-75 ms-auto me-auto" id="container-447c775022427997699b9223051cb580"></div>
 
-        <div class="mt-5 mb-5 border-top"></div>
+        <div class="mt-3 mb-3 border-top"></div>
 
-        <div class="mt-3 text-center">
+        <div class="mt-3 mb-3 text-center">
             <span>Hasil suara dikumpulkan berdasarkan data</span><br />
 
             <div class="w-50 ms-auto me-auto">
@@ -92,7 +92,7 @@
 
         </div>
 
-        <div class="mt-5 mb-5 border-top"></div>
+        <div class="mt-3 mb-3 border-top"></div>
 
         <div class="w-100 mb-5 text-center">
             <a href="https://beta.publishers.adsterra.com/referral/PxaJdqU9md">
