--- a/IPE/quick-count.html
+++ b/IPE/quick-count.html
@@ -37,7 +37,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3">
         <div class="container-fluid ms-5 me-5">
-            <a href="#" class="navbar-brand fs-3 fw-bold text-danger mb-0">IPE<span class="text-body">2024</span></a>
+            <a href="./index.html" class="navbar-brand fs-3 fw-bold text-danger mb-0">IPE<span class="text-body">2024</span></a>
             <button id="tema" onclick="aturTema()" class="btn text-body mdi mdi-weather-night"></button>
         </div>
     </nav>
