--- a/IPE/index.html
+++ b/IPE/index.html
@@ -222,6 +222,10 @@
 
         <div class="mt-3 mb-3 border-top"></div>
 
+        <div class="w-100 ms-auto me-auto " id="container-447c775022427997699b9223051cb580"></div>
+
+        <div class="mt-3 mb-3 border-top"></div>
+
         <div class="mt-3 text-center">
             <span>Yuk kenalan lebih dalam sama ketiga Paslon dan melek politik bersama</span><br />
 
@@ -231,10 +235,6 @@
             </a>
 
         </div>
-
-        <div class="mt-3 mb-3 border-top"></div>
-
-        <div class="w-100 ms-auto me-auto " id="container-447c775022427997699b9223051cb580"></div>
 
         <div class="mt-3 mb-3 border-top"></div>
 
@@ -253,7 +253,16 @@
 
 </html>
 
-<script src="./database.js"></script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'e5ed8309a7df23b456c80760b4671bee',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/e5ed8309a7df23b456c80760b4671bee/invoke.js"></scr' + 'ipt>');
+</script>
 <script type="text/javascript">
     (sc_adv_out = window.sc_adv_out || []).push({
         id: 883308,
@@ -261,6 +270,8 @@
     });
 </script>
 <script type="text/javascript" src="//st-n.ads1-adnow.com/js/a.js" async></script>
+
+<script src="./database.js"></script>
 <script>
     // Theme
     let tema = document.getElementById("tema").classList
