--- a/IPE/quick-count.html
+++ b/IPE/quick-count.html
@@ -77,7 +77,7 @@
 
         <div class="mt-3 mb-3 border-top"></div>
 
-        <div class="w-75 ms-auto me-auto" id="container-447c775022427997699b9223051cb580"></div>
+        <div class="w-100 ms-auto me-auto " id="container-447c775022427997699b9223051cb580"></div>
 
         <div class="mt-3 mb-3 border-top"></div>
 
@@ -110,6 +110,16 @@
 
 </html>
 
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'e5ed8309a7df23b456c80760b4671bee',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/e5ed8309a7df23b456c80760b4671bee/invoke.js"></scr' + 'ipt>');
+</script>
 <script type="text/javascript">
     (sc_adv_out = window.sc_adv_out || []).push({
         id: 883308,
@@ -209,6 +219,8 @@
             })
         }
     }
+
+    setTimeout(iklan, 5000)
 </script>
 
 <style>
