--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -90,6 +90,18 @@
         </div>
 
         <div class="input-group">
+            <div style="width: -webkit-fill-available !important;">
+                <script type="text/javascript">
+                    atOptions = {
+                        'key' : 'e5ed8309a7df23b456c80760b4671bee',
+                        'format' : 'iframe',
+                        'height' : 90,
+                        'width' : 728,
+                        'params' : {}
+                    };
+                    document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/e5ed8309a7df23b456c80760b4671bee/invoke.js"></scr' + 'ipt>');
+                </script>
+            </div>
             <select class="form-select" id="member">
             </select>
             <button type="button" class="btn btn-primary" id="get">GET</button>
@@ -102,14 +114,14 @@
             </div>
         </div>
 
-        <div class="ads mt-3 mb-3" id="container-447c775022427997699b9223051cb580"></div>
-
         <ul class="list-group" id="chatNext">
             <li class="list-group-item" style="display: none;" id="chat-item-next"></li>
         </ul>
         <ul class="list-group" id="chat">
             <li class="list-group-item" style="display: none;" id="chat-item"></li>
         </ul>
+
+        <div class="ads mt-3 mb-3" id="container-447c775022427997699b9223051cb580"></div>
     </form>
     <form id="empty" class="empty" style="display: none;">
         <p class="modal-title">Data Tidak Ditemukan!</p><br />
@@ -130,6 +142,7 @@
 
 </html>
 
+<script type='text/javascript' src='//pl22517162.profitablegatecpm.com/ff/7c/4d/ff7c4d9bafb3ea36c5bf3bd4812d08a5.js'></script>
 <script>
     function iklan() {
         let adsLink = document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")
