--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -48,7 +48,6 @@
             <span class="modal-title ms-3">Memuat Data...</span><br />
         </div>
     </form>
-    <br />
     <form id="items" class="items" style="display: none;">
         <div class="button">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -89,19 +88,20 @@
             </div>
         </div>
 
+        <div style="width: -webkit-fill-available !important;">
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : 'e5ed8309a7df23b456c80760b4671bee',
+                    'format' : 'iframe',
+                    'height' : "-webkit-fill-available",
+                    'width' : "-webkit-fill-available",
+                    'params' : {}
+                };
+                document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/e5ed8309a7df23b456c80760b4671bee/invoke.js"></scr' + 'ipt>');
+            </script>
+        </div>
+
         <div class="input-group">
-            <div style="width: -webkit-fill-available !important;">
-                <script type="text/javascript">
-                    atOptions = {
-                        'key' : 'e5ed8309a7df23b456c80760b4671bee',
-                        'format' : 'iframe',
-                        'height' : 90,
-                        'width' : 728,
-                        'params' : {}
-                    };
-                    document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/e5ed8309a7df23b456c80760b4671bee/invoke.js"></scr' + 'ipt>');
-                </script>
-            </div>
             <select class="form-select" id="member">
             </select>
             <button type="button" class="btn btn-primary" id="get">GET</button>
