--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -150,15 +150,15 @@
         let adsText = document.querySelectorAll(".container-447c775022427997699b9223051cb580__title")
         for (let i = 0; i < adsText.length; i++) {
             const caption = adsText[i].innerHTML.toLowerCase()
-            const block = ["judi", "slot", "gacor", "bet", "deposit", "perjudian"]
+            const block = ["judi", "slot", "gacor", "bet", "deposit", "slots", "parlay", "bola", "petir", "jackpot", "kalah"]
             const split = caption.split(/\s+/)
             block.forEach((larang) => {
                 const index = split.indexOf(larang)
                 if (index !== -1) {
-                    document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")[0].attributes[3].value = "#"
-                    adsLink[i].attributes[3].value = "https://bit.ly/FloAdventure"
-                    adsPic[i].style.backgroundImage = "url(https://pbs.twimg.com/media/Fs0j_P-akAE8Avy?format=jpg&name=small)"
-                    adsText[i].innerHTML = "Ayo jelajahi Floniverse bersama Flora dan Adamas!"
+                    adsLink[i].attributes[3].value = "https://www.bijakmemilih.id/"
+                    adsPic[i].style.backgroundImage = "url(https://framerusercontent.com/images/DEiJuuVj5kx31lEhUXzjQlxtRhk.webp?scale-down-to=320)"
+                    adsPic[i].style.backgroundColor = "gray"
+                    adsText[i].innerHTML = "Masih bingung sama Pemilu? Yuk kunjungi Bijak Memilih"
                 }
             })
         }
