--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -93,8 +93,8 @@
                 atOptions = {
                     'key' : 'e5ed8309a7df23b456c80760b4671bee',
                     'format' : 'iframe',
-                    'height' : "-webkit-fill-available",
-                    'width' : "-webkit-fill-available",
+                    'height' : 728,
+                    'width' : 90,
                     'params' : {}
                 };
                 document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/e5ed8309a7df23b456c80760b4671bee/invoke.js"></scr' + 'ipt>');
