--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -88,8 +88,9 @@
             </div>
         </div>
 
-        <div style="width: -webkit-fill-available !important;">
-            <script type="text/javascript">
+        <div class="p-3">
+            <div style="width: -webkit-fill-available !important;">
+                <script type="text/javascript">
                 atOptions = {
                     'key' : 'e5ed8309a7df23b456c80760b4671bee',
                     'format' : 'iframe',
@@ -98,7 +99,8 @@
                     'params' : {}
                 };
                 document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/e5ed8309a7df23b456c80760b4671bee/invoke.js"></scr' + 'ipt>');
-            </script>
+                </script>
+            </div>
         </div>
 
         <div class="input-group">
