--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -87,10 +87,9 @@
                 </div>
             </div>
         </div>
-
-        <div class="p-3">
-            <div style="width: -webkit-fill-available !important;">
-                <script type="text/javascript">
+        
+        <div class="w-100">
+            <script type="text/javascript">
                 atOptions = {
                     'key' : 'e5ed8309a7df23b456c80760b4671bee',
                     'format' : 'iframe',
@@ -99,8 +98,7 @@
                     'params' : {}
                 };
                 document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/e5ed8309a7df23b456c80760b4671bee/invoke.js"></scr' + 'ipt>');
-                </script>
-            </div>
+            </script>
         </div>
 
         <div class="input-group">
