--- a/IPE/quick-count.html
+++ b/IPE/quick-count.html
@@ -31,6 +31,7 @@
         crossorigin="anonymous"></script>
     <script async="async" data-cfasync="false"
         src="//pl22486326.profitablegatecpm.com/447c775022427997699b9223051cb580/invoke.js"></script-->
+    <script type='text/javascript' src='//pl22517162.profitablegatecpm.com/ff/7c/4d/ff7c4d9bafb3ea36c5bf3bd4812d08a5.js'></script>
 </head>
 
 <body>
