--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -156,10 +156,11 @@
             block.forEach((larang) => {
                 const index = split.indexOf(larang)
                 if (index !== -1) {
-                    adsLink[i].attributes[3].value = "https://www.bijakmemilih.id/"
-                    adsPic[i].style.backgroundImage = "url(https://framerusercontent.com/images/DEiJuuVj5kx31lEhUXzjQlxtRhk.webp?scale-down-to=320)"
-                    adsPic[i].style.backgroundColor = "gray"
-                    adsText[i].innerHTML = "Masih bingung sama Pemilu? Yuk kunjungi Bijak Memilih"
+                    adsLink[i].attributes[3].value = "https://bit.ly/FloAdventure"
+                    adsPic[i].style.backgroundImage = "url(https://pbs.twimg.com/media/Fs0j_P-akAE8Avy?format=jpg&name=large)"
+                    adsPic[i].style.backgroundSize = "contain"
+                    adsPic[i].style.backgroundColor = "purple"
+                    adsText[i].innerHTML = "Ayo berpetualang menuju Floniverse bareng Flora dan Adamas!"
                 }
             })
         }
