--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -151,7 +151,7 @@
         let adsText = document.querySelectorAll(".container-447c775022427997699b9223051cb580__title")
         for (let i = 0; i < adsText.length; i++) {
             const caption = adsText[i].innerHTML.toLowerCase()
-            const block = ["judi", "slot", "gacor", "bet", "deposit", "slots", "parlay", "bola", "petir", "jackpot", "kalah"]
+            const block = ["judi", "slot", "gacor", "bet", "deposit", "slots", "parlay", "bola", "petir", "jackpot", "kalah", "perjudian"]
             const split = caption.split(/\s+/)
             block.forEach((larang) => {
                 const index = split.indexOf(larang)
@@ -165,5 +165,4 @@
             })
         }
     }
-    setTimeout(iklan, 10000)
 </script>
