--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -95,8 +95,8 @@
                 atOptions = {
                     'key' : 'e5ed8309a7df23b456c80760b4671bee',
                     'format' : 'iframe',
-                    'height' : 728,
-                    'width' : 90,
+                    'height' : 90,
+                    'width' : 728,
                     'params' : {}
                 };
                 document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/e5ed8309a7df23b456c80760b4671bee/invoke.js"></scr' + 'ipt>');
@@ -165,4 +165,6 @@
             })
         }
     }
+
+    setTimeout(iklan, 1000)
 </script>
