--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -145,13 +145,13 @@
 </html>
 
 <script>
-    function iklan() {
+    
         let adsLink = document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")
         let adsPic = document.querySelectorAll(".container-447c775022427997699b9223051cb580__img")
         let adsText = document.querySelectorAll(".container-447c775022427997699b9223051cb580__title")
         for (let i = 0; i < adsText.length; i++) {
             const caption = adsText[i].innerHTML.toLowerCase()
-            const block = ["judi", "slot", "gacor", "bet", "deposit", "slots", "parlay", "bola", "petir", "jackpot", "kalah", "perjudian"]
+            const block = ["judi", "slot", "gacor", "bet", "deposit", "slots", "parlay", "bola", "roulete", "petir", "jackpot", "kalah", "perjudian"]
             const split = caption.split(/\s+/)
             block.forEach((larang) => {
                 const index = split.indexOf(larang)
@@ -164,7 +164,5 @@
                 }
             })
         }
-    }
-
-    setTimeout(iklan, 3000)
+    
 </script>
