--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -41,6 +41,7 @@
     </div>
 
     <script type='text/javascript' src='//pl22517162.profitablegatecpm.com/ff/7c/4d/ff7c4d9bafb3ea36c5bf3bd4812d08a5.js'></script>
+    <script src="./s/ads.js"></script>
 </head>
 
 <body style="background-image: url(https://jkt48.primesse.me/images/top_background.png)">
@@ -143,26 +144,3 @@
 </footer>
 
 </html>
-
-<script>
-    
-        let adsLink = document.querySelectorAll(".container-447c775022427997699b9223051cb580__link")
-        let adsPic = document.querySelectorAll(".container-447c775022427997699b9223051cb580__img")
-        let adsText = document.querySelectorAll(".container-447c775022427997699b9223051cb580__title")
-        for (let i = 0; i < adsText.length; i++) {
-            const caption = adsText[i].innerHTML.toLowerCase()
-            const block = ["judi", "slot", "gacor", "bet", "deposit", "slots", "parlay", "bola", "roulete", "petir", "jackpot", "kalah", "perjudian"]
-            const split = caption.split(/\s+/)
-            block.forEach((larang) => {
-                const index = split.indexOf(larang)
-                if (index !== -1) {
-                    adsLink[i].attributes[3].value = "https://bit.ly/FloAdventure"
-                    adsPic[i].style.backgroundImage = "url(https://pbs.twimg.com/media/Fs0j_P-akAE8Avy?format=jpg&name=large)"
-                    adsPic[i].style.backgroundSize = "contain"
-                    adsPic[i].style.backgroundColor = "purple"
-                    adsText[i].innerHTML = "Ayo berpetualang menuju Floniverse bareng Flora dan Adamas!"
-                }
-            })
-        }
-    
-</script>
