--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -112,7 +112,9 @@
         <div class="input-group">
             <select class="form-select" id="member">
             </select>
-            <button type="button" class="btn btn-primary" id="get">GET</button>
+            <a href="https://www.profitablegatecpm.com/rb52f96g?key=30d5900c37c30b30a343c8f91abef525" target="_blank">
+                <button type="button" class="btn btn-primary" id="get">GET</button>
+            </a>
         </div>
 
         <div id="loadChat" class="load" style="display: none;">
