--- a/IPE/index.html
+++ b/IPE/index.html
@@ -27,8 +27,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1580562505317506"
-        crossorigin="anonymous"></script>
+    <!-- Ads -->
     <script async="async" data-cfasync="false"
         src="//pl22486326.profitablegatecpm.com/447c775022427997699b9223051cb580/invoke.js"></script>
     <script type='text/javascript' src='//pl22517162.profitablegatecpm.com/ff/7c/4d/ff7c4d9bafb3ea36c5bf3bd4812d08a5.js'></script>
@@ -245,13 +244,14 @@
                     "key" : "e5ed8309a7df23b456c80760b4671bee",
                     "format" : "iframe",
                     "height" : 90,
-                    "width" : "-webkit-fill-available",
+                    "width" : 728,
                     "params" : {}
                 }
                 document.write(`<scr` + `ipt type="text/javascript" src="//www.topcreativeformat.com/e5ed8309a7df23b456c80760b4671bee/invoke.js"></scr` + `ipt>`)
             </script>
         </div>
     </div>
+    <script type='text/javascript' src='//pl22539628.profitablegatecpm.com/a8/8a/2a/a88a2ace9b2e767762f106a30ddf3f6b.js'></script>
 </body>
 
 <footer class="bg-body-tertiary p-3 text-center">
@@ -259,14 +259,6 @@
 </footer>
 
 </html>
-
-<script type="text/javascript">
-    (sc_adv_out = window.sc_adv_out || []).push({
-        id: 883308,
-        domain: "n.ads1-adnow.com",
-    });
-</script>
-<script type="text/javascript" src="//st-n.ads1-adnow.com/js/a.js" async></script>
 
 <script src="./database.js"></script>
 <script>
