--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -145,6 +145,7 @@
                 role="button" aria-disabled="true">Langganan</a>
         </div>
     </section>
+    <script type='text/javascript' src='//pl22539628.profitablegatecpm.com/a8/8a/2a/a88a2ace9b2e767762f106a30ddf3f6b.js'></script>
 </body>
 
 <footer class="footer">
