--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -134,6 +134,18 @@
         <div class="ads mt-3 mb-3" id="container-447c775022427997699b9223051cb580"></div>
     </section>
     <section id="empty" class="empty" style="display: none;">
+        <div class="w-100">
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : 'e5ed8309a7df23b456c80760b4671bee',
+                    'format' : 'iframe',
+                    'height' : 90,
+                    'width' : 728,
+                    'params' : {}
+                };
+                document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/e5ed8309a7df23b456c80760b4671bee/invoke.js"></scr' + 'ipt>');
+            </script>
+        </div>
         <p class="modal-title">Data Tidak Ditemukan!</p><br />
         <p class="modal-body mb-3">
             Mohon maaf! Kami tidak dapat menemukan data berlangganan kamu.<br />
@@ -144,6 +156,7 @@
             <a href="https://habilihsanproject.github.io/jkt48-pm/p/subs" class="btn btn-success" tabindex="-1"
                 role="button" aria-disabled="true">Langganan</a>
         </div>
+        <div class="ads mt-3 mb-3" id="container-447c775022427997699b9223051cb580"></div>
     </section>
 </body>
 
