--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
 </head>
 
 <body>
-  <div id="navbar"></div>
+  <template id="navbar"></template>
   <section id="carousel" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active" id="stone">
         <img src="/source/assets/background.jpg" class="d-block w-100 filter">
         <div class="carousel-caption d-md-block project">
           <h1>nebula project</h1>
-          <b>MARCH 1ST, 2024</b>
         </div>
       </div>
     </div>
   </section>
-  <div id="container-447c775022427997699b9223051cb580"></div>
+  <section class="text-center m-3 p-3 border">
+    ADVERTISMENT<br/>
+    <div class="w-50" id="container-447c775022427997699b9223051cb580"></div>
+  </section>
 </body>
 
 <footer>
