--- a/physics/index.html
+++ b/physics/index.html
@@ -16,11 +16,11 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CMS E-MODUL WEBSITE</title>
+    <title>E-MODUL ENERGI TERBARUKAN</title>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary p-3">
         <div class="container-fluid">
-            <a class="navbar-brand h1 me-auto mb-0" href="#">E-MODUL WEBSITE FISIKA</a>
+            <a class="navbar-brand h1 me-auto mb-0" href="#">E-MODUL FISIKA</a>
             <button class="navbar-toggler" type="button"
                 data-bs-toggle="collapse" data-bs-target="#navbarContent">
                 <span class="navbar-toggler-icon"></span>
@@ -28,31 +28,25 @@
             <div class="collapse navbar-collapse" id="navbarContent">
                 <ul class="navbar-nav ms-auto mb-lg-0" id="navbarList">
                 </ul>
-                <form class="input-group ms-auto mb-lg-0" style="width: fit-content;" role="search">
+                <!--form class="input-group ms-auto mb-lg-0" style="width: fit-content;" role="search">
                     <input class="form-control" type="search" placeholder="Temukan">
                     <button class="btn btn-outline-secondary" type="submit">
                         <i class="bi bi-search"></i>
                     </button>
-                </form>
+                </form-->
             </div> 
         </div>
     </nav>
 </head>
 
 <body data-bs-theme="dark">
-    <div class="row me-0">
-        <div class="col-sm-2 pe-0 border-end">
-            <nav class="nav nav-pills flex-column p-3 ms-3" id="navdrawList">
-            </nav>
-        </div>
-        <div class="col-sm-10 p-5 d-grid">
-            <span class="h1 mb-5" id="title">E-Modul</span>
-        </div>
-    </div>
+    <section>
+        TEST
+    </section>
 </body>
 
-<footer class="d-flex mt-3">
-    <span class="ms-auto me-auto">Dibuat oleh
+<footer class="bg-body-tertiary p-3 text-center">
+    <span>Dibuat oleh
         <a href="mailto:h48ilihsan@gmail.com">Habil Ihsan</a>
         | Hak Cipta © 2024
     </span>
@@ -68,5 +62,12 @@
         background-size: cover;
         background-position: top;
         background-image: url("https://jkt48.com/profile/azizi_asadel.jpg");
+    }
+
+    footer {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: -webkit-fill-available;
     }
 </style>
