--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </section>
   <section class="text-center m-3 p-3 border">
     ADVERTISMENT<br/>
-    <div class="me-auto ms-auto w-100">
+    <div class="me-auto ms-auto">
       <script type="text/javascript">
         atOptions = {
             'key' : 'e5ed8309a7df23b456c80760b4671bee',
@@ -125,6 +125,10 @@
 </script>
 
 <style>
+  iframe {
+    width: -webkit-fill-available !important;
+  }
+  
   .filter {
     filter: brightness(70%);
   }
