--- a/jkt48-theater/pages.html
+++ b/jkt48-theater/pages.html
@@ -24,15 +24,15 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
 
-    <script src="./script/index.js"></script>
-    <script src="./script/schedule.js"></script>
+    <script src="./s/index.js"></script>
+    <script src="./s/schedule.js"></script>
 
     <title>JKT48 THEATER STREAMING</title>
     <div class="title">
-        <a href="./index.html" class="logo"><img src="./res/logo.png"></a>
-        <a href="./page/signup.html" class="btn btn-success authBtn" role="button" id="login-btn">Sign Up</a>
-        <a href="./page/login.html" class="btn btn-primary authBtn" role="button" id="signup-btn">Log In</a>
-        <a href="./page/payment.html" class="btn btn-info authBtn" style="display: none; color: white;" id="link">Watch</a>
+        <a href="./index.html" class="logo"><img src="./r/logo.png"></a>
+        <a href="./p/signup.html" class="btn btn-success authBtn" role="button" id="login-btn">Sign Up</a>
+        <a href="./p/login.html" class="btn btn-primary authBtn" role="button" id="signup-btn">Log In</a>
+        <a href="./p/payment.html" class="btn btn-info authBtn" style="display: none; color: white;" id="link">Watch</a>
         <button class="btn btn-danger authBtn" id="logout-btn" style="display: none;">Log Out</button>
         <button type="button" class="btn btn-light rounded-0 fw-bold" data-bs-toggle="modal" data-bs-target="#myModal">
             Cara Pembelian
