--- a/floquack/index.html
+++ b/floquack/index.html
@@ -3,19 +3,15 @@
 <head>
     <meta name="viewport" content="width=1024; maximum-scale=1; user-scalable=0;"/>
     <meta charset="UTF-8">
-    <title>Floniverse Adventure</title>
+    <title>Floquack Adventure</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0 !important;
-            background-color: black;
             overflow: hidden;
             overflow-y: hidden;
-        }
-        canvas {
-            border: solid black 2px;
         }
     </style>
 </head>
