--- a/floquack/index.html
+++ b/floquack/index.html
@@ -39,7 +39,7 @@
 
 <body>
     <canvas id="gameArea" width="1300" height="650"></canvas>
-    <button id="exitFullscreenBtn" class="fab" style="visibility: hidden;">X</button>
+    <button id="exitFullscreenBtn" class="fab" style="visibility: hidden;">⛶</button>
     <script src="./game.js"></script>
 </body>
 
