--- a/floquack/index.html
+++ b/floquack/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=1024, maximum-scale=1, user-scalable=0" />
     <meta charset="UTF-8">
-    <title>Floquack Adventure</title>
+    <title>FloQuack Adventure</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap" rel="stylesheet">
