--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -170,6 +170,7 @@
 </html>
 
 <script>
+    location.replace("https://habilihsanproject.vercel.app/jkt48pm/")
     function changePassword() {
             const emailaccount = prompt("Masukan email:")
             firebase.auth().sendPasswordResetEmail(emailaccount)
