--- a/Hafidh-Riska/index.html
+++ b/Hafidh-Riska/index.html
@@ -19,40 +19,41 @@
 </head>
 
 <body>
-    <div id="carouselExampleControls" class="carousel slide carousel-dark" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="./assets/cover.png" class="w3-animate-bottom">
-                <div class="w3-animate-bottom">
-                    <p>Kepada Yth.</p>
-                    <h1 id="tamu" class="p-0"></h1>
-                    <p>& Keluarga<br />
-                        <br />
-                        Di Tempat
-                    </p>
+    <div class="container-fluid">
+        <div id="carouselExampleControls" class="carousel slide carousel-dark" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active p-5">
+                    <img src="./assets/cover.png" class="w3-animate-bottom pic">
+                    <div class="w3-animate-bottom">
+                        <p>Kepada Yth.</p>
+                        <h1 id="tamu" class="p-0"></h1>
+                        <p>& Keluarga<br />
+                            <br />
+                            Di Tempat
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item p-5">
+                    <img src="./assets/jadwal.png" class="w3-animate-bottom pic">
+                </div>
+                <div class="carousel-item p-5">
+                    <img src="./assets/keterangan.png" class="w3-animate-bottom pic">
+                </div>
+                <div class="carousel-item p-5">
+                    <h1 class="w3-animate-bottom">Denah Lokasi</h1>
+                    <img src="./assets/denah.png" class="w3-animate-bottom denah">
                 </div>
             </div>
-            <div class="carousel-item">
-                <img src="./assets/jadwal.png" width="60%" class="w3-animate-bottom">
-            </div>
-            <div class="carousel-item">
-                <img src="./assets/keterangan.png" width="60%" class="w3-animate-bottom">
-            </div>
-            <div class="carousel-item">
-                <h1 class="w3-animate-bottom">Denah Lokasi</h1>
-                <img src="./assets/denah.png" class="w3-animate-bottom">
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </button>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </button>
     </div>
-
 </body>
 
 </html>
@@ -63,7 +64,6 @@
     }
 
     body {
-        width: -webkit-fill-available;
         height: -webkit-fill-available;
         align-content: center;
         text-align: center;
@@ -71,6 +71,14 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+    }
+
+    .pic {
+       width: -webkit-fill-available;
+    }
+    
+    .denah {
+        width: -webkit-fill-available;
     }
 
     h1,
@@ -101,4 +109,17 @@
     var param = GetParam(url, "tamu")
     var tamu = document.getElementById("tamu")
     tamu.innerText = decodeURI(param)
+
+    if (tamu.innerText === null) {
+        tamu.innerText = ""
+    }
+
+    var pic = document.getElementsByClassName("pic")
+    var denah = document.getElementsByClassName("denah")[0]
+    if (document.body.clientWidth > 1000) {
+        denah.style.width = "75%"
+        for (let i = 0; i < pic.length; i++) {
+            pic[i].style.width = `${document.body.clientWidth/3}px`
+        }
+    }
 </script>
